--- a/private/scss-finalium/_images.scss
+++ b/private/scss-finalium/_images.scss
@@ -6,21 +6,21 @@
 }
 
 .rounded {
-	border-radius: 50%;
+  border-radius: 50%;
 }
 
 .img-pfp-profiles {
-	max-width: 100px;
-	height: 100px;
-	width: 100px;
-	top: 20px;
-	left: 20px;
-	position: relative;
-	box-shadow: 0 1px 8px rgba(0,0,0,.4);
+  max-width: 100px;
+  height: 100px;
+  width: 100px;
+  top: 20px;
+  left: 20px;
+  position: relative;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, .4);
 }
 
 .img-center {
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
