--- a/private/scss-finalium/darkmode.scss
+++ b/private/scss-finalium/darkmode.scss
@@ -6,17 +6,17 @@ $green: #51ad18;
 $red: #ad1818;
 
 $theme-colors: (
-  "primary":    $primary,
-  "secondary":  $gray-800,
-  "success":    $success,
-  "info":       $info,
-  "warning":    $warning,
-  "danger":     $danger,
-  "neutral":    $gray-900,
-  "violet":     $indigo-color,
-  "blue-green": $teal-color,
-  "aqua": $aqua-color,
-  "carrot": $orange-color,
+        "primary": $primary,
+        "secondary": $gray-800,
+        "success": $success,
+        "info": $info,
+        "warning": $warning,
+        "danger": $danger,
+        "neutral": $gray-900,
+        "violet": $indigo-color,
+        "blue-green": $teal-color,
+        "aqua": $aqua-color,
+        "carrot": $orange-color,
 );
 
 @import "_buttons";
@@ -24,8 +24,8 @@ $theme-colors: (
 
 
 body {
-	background-color: #0F0F0F;
-	color: white;
+  background-color: #0F0F0F;
+  color: white;
 }
 
 #masthead a {
@@ -33,27 +33,27 @@ body {
 }
 
 .card {
-    border: 1px solid #2e2e2e;
-    background-color: #131313;
+  border: 1px solid #2e2e2e;
+  background-color: #131313;
 }
 
 .card-header {
-    border-bottom: 1px solid #2e2e2e;
-    background-color: #080808;
+  border-bottom: 1px solid #2e2e2e;
+  background-color: #080808;
 }
 
 .well {
-    background-color: #0b0b0b;
-    border: 1px solid #2d2d2d;
+  background-color: #0b0b0b;
+  border: 1px solid #2d2d2d;
 }
 
 .nav > li > a:hover, .nav > li > a:focus {
-    background-color: #222;
+  background-color: #222;
 }
 
 .subscribe-count {
-    border: 1px solid #444;
-    color: #aaa;
+  border: 1px solid #444;
+  color: #aaa;
 }
 
 .main-content {
@@ -63,228 +63,253 @@ body {
 }
 
 .form-signin {
-    background-color: #000;
-    border: 1px solid #2a2a2a;
+  background-color: #000;
+  border: 1px solid #2a2a2a;
 }
 
 #masthead-below {
-    background: #1f1f1f;
-    border-bottom: 1px solid #282828;
+  background: #1f1f1f;
+  border-bottom: 1px solid #282828;
 }
 
 a {
-	color: #ffff00;
+  color: #ffff00;
 }
 
 .top, .footer {
-	background-color: #111;
-	border-bottom: 1px solid #333;
-	border-top: 1px solid #333;
+  background-color: #111;
+  border-bottom: 1px solid #333;
+  border-top: 1px solid #333;
 }
 
 ul.menu {
-	a {
-		color: #ddd;
+  a {
+    color: #ddd;
 
-		&:hover {
-			background-color: #000;
-		}
-	}
+    &:hover {
+      background-color: #000;
+    }
+  }
 }
 
 .header_message {
-	border-bottom: 1px solid #333;
+  border-bottom: 1px solid #333;
 }
 
 div.level {
-	background-color: #000;
+  background-color: #000;
 
-	a.lvlbox_top {
-		color: white;
-	}
+  a.lvlbox_top {
+    color: white;
+  }
 }
 
 .comments {
-	.comment-entry {
-		border-bottom: 1px solid #333;
+  .comment-entry {
+    border-bottom: 1px solid #333;
 
-		&:nth-child(odd)  { background-color: #0a0a0a; }
-		&:nth-child(even) { background-color: #171717; }
+    &:nth-child(odd) {
+      background-color: #0a0a0a;
+    }
 
-		&.deleted {
-			background-color: #861c1c;
+    &:nth-child(even) {
+      background-color: #171717;
+    }
 
-			&:after {
-				color: #eee;
-			}
-		}
-	}
+    &.deleted {
+      background-color: #861c1c;
+
+      &:after {
+        color: #eee;
+      }
+    }
+  }
 }
 
 .latest-buttons a {
-	border: 2px outset white;
-	color: white;
+  border: 2px outset white;
+  color: white;
 
-	&:hover {
-		border: 2px inset white;
-		background-color: #222;
-	}
-	&.sel {
-		background-color: #003333;
+  &:hover {
+    border: 2px inset white;
+    background-color: #222;
+  }
 
-		&:hover {
-			border: 2px inset white;
-			background-color: #114444;
-		}
-	}
+  &.sel {
+    background-color: #003333;
+
+    &:hover {
+      border: 2px inset white;
+      background-color: #114444;
+    }
+  }
 }
 
 .t_user {
-	color: #9898ff;
+  color: #9898ff;
 }
 
 .lvl-box {
-	.info {
-		background-color: #050505;
+  .info {
+    background-color: #050505;
 
-		.play {
-			background-color: #608060;
-			color: #eee;
+    .play {
+      background-color: #608060;
+      color: #eee;
 
-			&:hover {
-				box-shadow: 0 0px 4px #fff;
-			}
-		}
+      &:hover {
+        box-shadow: 0 0px 4px #fff;
+      }
+    }
 
-		.play-edit {
-			background-color: #636383;
-		}
-	}
+    .play-edit {
+      background-color: #636383;
+    }
+  }
 }
 
 .lvl-data {
-	background-color: #000;
+  background-color: #000;
 }
 
 .dl {
-	td {
-		border: 1px solid white;
-	}
+  td {
+    border: 1px solid white;
+  }
 }
 
 .settings {
-	.a, .b {
-		border-bottom: 1px solid #333;
-	}
+  .a, .b {
+    border-bottom: 1px solid #333;
+  }
 
-	tr {
-		&:nth-child(odd)  { background-color: #0a0a0a; }
-		&:nth-child(even) { background-color: #171717; }
-	}
+  tr {
+    &:nth-child(odd) {
+      background-color: #0a0a0a;
+    }
+
+    &:nth-child(even) {
+      background-color: #171717;
+    }
+  }
 }
 
 .cummunity-levelz {
-	li {
-		span {
-			background-color: #222;
-		}
+  li {
+    span {
+      background-color: #222;
+    }
 
-		a {
-			background-color: #608060;
-			color: #eee;
+    a {
+      background-color: #608060;
+      color: #eee;
 
-			&:hover {
-				box-shadow: 0 0px 4px #fff;
-			}
-		}
-	}
+      &:hover {
+        box-shadow: 0 0px 4px #fff;
+      }
+    }
+  }
 }
 
 .user_stats {
-	border: 1px solid white;
-	.row {
-		border-top: 1px solid white;
-	}
+  border: 1px solid white;
+
+  .row {
+    border-top: 1px solid white;
+  }
 }
 
 .tab button:hover {
-    color: #fff;
+  color: #fff;
 }
+
 .tab button {
-    color: #fff8;
+  color: #fff8;
 }
 
 .tab button.active {
-    color: #888;
+  color: #888;
 }
 
 #About .description-extra .title {
-    color: #666;
+  color: #666;
 }
 
 .watchNext .viewcount {
-    color: #666;
+  color: #666;
 }
 
 /// _style_forums \\\
 
 table.c1 {
-	border: 1px solid $gray-800;
+  border: 1px solid $gray-800;
 
-	td.b {
-		border: 1px solid $gray-800;
-	}
+  td.b {
+    border: 1px solid $gray-800;
+  }
 
-	tr.n1, td.n1 { background-color: #0a0a0a; }
-	tr.n2, td.n2 { background-color: #141414; }
-	tr.n3, td.n3 { background-color: #2b2b2b; }
-	tr.h { background-color: $blue; }
+  tr.n1, td.n1 {
+    background-color: #0a0a0a;
+  }
+
+  tr.n2, td.n2 {
+    background-color: #141414;
+  }
+
+  tr.n3, td.n3 {
+    background-color: #2b2b2b;
+  }
+
+  tr.h {
+    background-color: $blue;
+  }
 }
 
 .threadpost {
-	.mainbar {
-		td, th, table {
-			border: 1px solid white;
-		}
-		.siggy {
-			border-top: 1px solid white;
-		}
-	}
+  .mainbar {
+    td, th, table {
+      border: 1px solid white;
+    }
+
+    .siggy {
+      border-top: 1px solid white;
+    }
+  }
 }
 
 .top_forum {
-	margin-top: -1px;
+  margin-top: -1px;
 }
 
 /// Generic form element overrides \\\
 
 textarea, input[type=text], input[type=password] {
-	background-color: #0f0f0f;
-	border: 2px solid #222;
-	color: white;
+  background-color: #0f0f0f;
+  border: 2px solid #222;
+  color: white;
 }
 
 /// Invert icons \\\
 
 .search, .sdsd {
-	filter: invert(1);
+  filter: invert(1);
 }
 
 .vid-info .title a {
-	color: white;
+  color: white;
 }
 
 #masthead-container {
-    background-color: #383838f0;
-	border-bottom: 1px solid #606060;
+  background-color: #383838f0;
+  border-bottom: 1px solid #606060;
 }
 
 #masthead-search {
-	#masthead-search-terms {
-		input {
-		border-color: #606060;
-		}
-	}
+  #masthead-search-terms {
+    input {
+      border-color: #606060;
+    }
+  }
 }
 
 .statbox {
