--- a/private/scss-finalium/_style_forums.scss
+++ b/private/scss-finalium/_style_forums.scss
@@ -1,109 +1,130 @@
 /// forum specific styling uwu -rollerguy 2021 \\\
 
 table.c1 {
-	border: #000000 1px solid;
-	border-spacing: 0px;
-	border-collapse: collapse;
-	width: 100%;
+  border: #000000 1px solid;
+  border-spacing: 0px;
+  border-collapse: collapse;
+  width: 100%;
 
-	tr.c {
-		text-align: center;
-	}
+  tr.c {
+    text-align: center;
+  }
 
-	tr.h {
-		background: #6e94b7;
-		color: #ffffff;
-		font-weight: bold;
-	}
+  tr.h {
+    background: #6e94b7;
+    color: #ffffff;
+    font-weight: bold;
+  }
 
-	tr.c {
-		background: #55b4cc;
-	}
+  tr.c {
+    background: #55b4cc;
+  }
 
-	td.b {
-		border: #000000 1px solid;
-		padding: 5px;
-	}
+  td.b {
+    border: #000000 1px solid;
+    padding: 5px;
+  }
 
-	td.nb {
-		padding: 1px;
-		border: 0px none;
-	}
+  td.nb {
+    padding: 1px;
+    border: 0px none;
+  }
 
-	tr.n1, td.n1 { background: #afc6db; }
-	tr.n2, td.n2 { background: #ffffff; }
-	tr.n3, td.n3 { background: #d4d4d4; }
+  tr.n1, td.n1 {
+    background: #afc6db;
+  }
 
-	.delete {
-		font-weight:900;
-		display: inline-block;
-		margin-left: 6px;
-		margin-right: 6px;
-		font-size: 18px;
-		color: red;
-	}
+  tr.n2, td.n2 {
+    background: #ffffff;
+  }
+
+  tr.n3, td.n3 {
+    background: #d4d4d4;
+  }
+
+  .delete {
+    font-weight: 900;
+    display: inline-block;
+    margin-left: 6px;
+    margin-right: 6px;
+    font-size: 18px;
+    color: red;
+  }
 }
 
 .pagelist {
-	margin-left: 4px;
-	margin-top: 4px;
-	margin-bottom: 4px;
+  margin-left: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .posttoolbar button {
-	height: 2em;
-	width: 2em;
-	padding: 0 1px 2px;
+  height: 2em;
+  width: 2em;
+  padding: 0 1px 2px;
 }
 
 .threadpost {
-	.topbar_1 {
-		border-bottom: 0 !important;
-		min-width: 180px;
-		text-align: center;
-		height: 24px;
-	}
+  .topbar_1 {
+    border-bottom: 0 !important;
+    min-width: 180px;
+    text-align: center;
+    height: 24px;
+  }
 
-	.sidebar {
-		border-top: 0 !important;
-		text-align: center;
+  .sidebar {
+    border-top: 0 !important;
+    text-align: center;
 
-		.avatar {
-			max-width: 120px;
-			max-height: 120px;
-			border-radius: 5px;
-		}
-	}
+    .avatar {
+      max-width: 120px;
+      max-height: 120px;
+      border-radius: 5px;
+    }
+  }
 
-	.mainbar {
-		p {
-			margin-top: 0;
-		}
-		table {
-			border: #000000 1px solid;
-			border-spacing: 0px;
-			border-collapse: collapse;
-		}
-		th {
-			background: #3367aa;
-			font-size: 1em;
-			color: #ffffff;
-		}
-		td, th {
-			border: #000000 1px solid;
-			padding: 5px;
-		}
-		.siggy {
-			border-top: 1px solid black;
-			font-size: 10pt;
-			margin-top: 3em;
-		}
-		img {
-			max-width: 100%;
-		}
-	}
+  .mainbar {
+    p {
+      margin-top: 0;
+    }
+
+    table {
+      border: #000000 1px solid;
+      border-spacing: 0px;
+      border-collapse: collapse;
+    }
+
+    th {
+      background: #3367aa;
+      font-size: 1em;
+      color: #ffffff;
+    }
+
+    td, th {
+      border: #000000 1px solid;
+      padding: 5px;
+    }
+
+    .siggy {
+      border-top: 1px solid black;
+      font-size: 10pt;
+      margin-top: 3em;
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
-.autowidth { width: auto !important; }
-.wbreak { word-break: break-word; }
-.fullwidth { width: 100% !important; }
+.autowidth {
+  width: auto !important;
+}
+
+.wbreak {
+  word-break: break-word;
+}
+
+.fullwidth {
+  width: 100% !important;
+}
