--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -38,7 +38,8 @@
                             <span>{{ __("Published on %s", [video.time | date('M j, Y')]) }} • {{ viewCount }} {{ __("views") }}</span>
                             <br>
                             {% if userdata.id == video.author %}<a
-                                class="button button-secondary button-small" href="/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>{% else %}
+                                class="button button-secondary button-small"
+                                href="/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>{% else %}
                                 <button id="subscribe-watch"
                                         class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small"
                                         type="button"
