--- a/private/templates/sbnext-mobile/watch.twig
+++ b/private/templates/sbnext-mobile/watch.twig
@@ -34,7 +34,8 @@
                     • {{ allVideos }} {{ __("videos") }}
                     <br>
                     {% if userdata.id == video.author %}<a
-                            class="button button-secondary button-small" href="/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>{% else %}
+                        class="button button-secondary button-small"
+                        href="/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>{% else %}
                         <button id="subscribe-watch"
                                 class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small"
                                 type="button"
