--- a/private/scss-finalium/_navs.scss
+++ b/private/scss-finalium/_navs.scss
@@ -2,16 +2,12 @@
   display: block;
   padding: 3px 15px;
   font-size: 11px;
-  font-weight: bold;
   line-height: 20px;
   color: #999999;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  text-transform: uppercase;
 }
 
 .nav-list {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0 15px;
   margin-bottom: 0;
 }
 
@@ -19,16 +15,6 @@
   margin-bottom: 20px;
   margin-left: 0;
   list-style: none;
-}
-
-.well {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 .sidebar-nav {
