--- a/private/templates/sbnext-common/components/smallvideobox.twig
+++ b/private/templates/sbnext-common/components/smallvideobox.twig
@@ -2,12 +2,11 @@
     <div class="col-md-4 ">
         <a href="watch.php?v={{ data.video_id }}">
             <img class="img-fluid " src="{{ video_thumbnail(data.video_id) }}">
-            <span class="video-time">{{ video_length(data) }}</span>
         </a>
     </div>
     <div class="col-md-8 vid-info">
         <h3 class="title"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-        <span class="stat">{{ __("by") }} {{ userlink(data, 'u_') }}</span>
-        <span class="stat">{{ data.views }} {{ __("views") }}</span>
+        <span class="stat">{{ __("by") }} {{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}</span>
+        <span class="stat">{{ video_length(data) }}</span>
     </div>
 </div>
