--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -80,16 +80,24 @@
 {% endif %}
 {% block precontent %}{% endblock %}
 <div class="container page-container">
+    {% if userbandata %}
+        <div class="header_message header-danger">
+            <h1>{{ __("Sorry %s, you are banned from squareBracket.", [userdata.name]) }}</h1>
+            <strong>{{ userbandata.reason }}</strong>
+            <p>{{ __("This ban is not set to expire.") }}</p>
+            {# do we really need ban durations? #}
+        </div>
+    {% endif %}
     {% block content %}{% endblock %}
 </div>
 </div>
 <footer>
     <div class="footer">
         <img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
-        <p>Version {{ version }} · <b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }}
+        <p>{{ __("Version") }} {{ version }} · <strong>{{ __("By the squareBracket contributors") }}</strong> · 2020-{{ 'now' | date('Y') }}
             | <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
         </p>
-        <h5>{{ __("Running on commit: ") }} <a
+        <h5>{{ __("Running on Git commit: ") }} <a
                     href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a><br>
         </h5>
         {% if isMaintenance != true %}
