--- a/private/templates/sbnext-common/settings.twig
+++ b/private/templates/sbnext-common/settings.twig
@@ -35,6 +35,7 @@
     </table>
 
     <h3>{{ __("Profile") }}</h3>
+    {% if userbandata != true %}
     <table class="settings">
         <tr>
             <td class="a">{{ __("Profile picture") }}</td>
@@ -59,6 +60,9 @@
                                  value="{{ userdata.customcolor | default('523bb8') }}"></td>
         </tr>
     </table>
+    {% else %}
+        <p>{{ __("Profile options are not available to banned users.") }}</p>
+    {% endif %}
 
     <h3>{{ __("Miscellaneous") }}</h3>
     <table class="settings">
